src/assets/styles/globals.css
/* ... */
/* ================== HEADER ==================== */

.top-header {
	background-color: #0f0f0f;
	padding: 3px 0;
}
.tp-links li {
	display: inline-block;
	padding: 0 20px 0 17px;
	border-right: 1px solid #555555;
	line-height: 14px;
}
.tp-links li:first-child {
	padding-left: 0;
}
.tp-links li:last-child {
	border-right: 0;
}
.tp-links li a {
	display: inline-block;
	color: #e9e9e9;
	font-size: 16px;
}


.login {
	display: inline-block;
	color: #d5d5d5;
	font-size: 17px;
	line-height: 44px;
}
.login i {
	margin-right: 8px;
	vertical-align: top;
}
.login i:before {
	font-size: 16px;
}


.social-links {
	display: inline-block;
	float:right;
}
.social-links li {
	display: inline-block;
	margin-right: 1px;
}
.social-links li:last-child {
	margin-right: 0;
}
.social-links li a {
	display: inline-block;
	height: 48px;
	line-height: 48px;
	background-color: #232323;
	color: #fff;
	width: 48px;
	text-align: center;
}

/* BOTTOM HEADER */

.bottom-header {
	background-color: #fff;
}
.bottom-header.sticky {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.11);
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.11);
	-ms-box-shadow: 0 0 10px rgba(0,0,0,0.11);
	-o-box-shadow: 0 0 10px rgba(0,0,0,0.11);
	box-shadow: 0 0 10px rgba(0,0,0,0.11);
	z-index: 999999999;
}
header .bottom-header.sticky nav > ul > li {
	padding: 25px 16px 28px;
}
.bottom-header.sticky .logo > a img {
	max-width: 70%;
}
header.pb .bottom-header.sticky {
	background: #333;
}

.header-content {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
}
header nav {
	margin-left: auto;
}
header nav ul li {
	position: relative;
}
header nav ul > li {
	display: inline-block;
	padding: 46px 16px 48px;
}
header nav ul > li > a {
	display: inline-block;
	color: #333333;
	font-size: 18px;
	font-weight: 500;
}
nav ul li:hover > ul {
	opacity: 1;
	visibility: visible;
	margin-top: 0;
}
nav ul ul {
	position: absolute;
	top: 100%;
	left: 0;
	width: 210px;
	z-index: 99;
	background: #fff;
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.10);
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.10);
	-ms-box-shadow: 0 0 10px rgba(0,0,0,0.10);
	-o-box-shadow: 0 0 10px rgba(0,0,0,0.10);
	box-shadow: 0 0 10px rgba(0,0,0,0.10);
	opacity: 0;
	visibility: hidden;
	margin-top: 20px;
	padding: 20px;
	-webkit-border-radius: 20px;
	-moz-border-radius: 20px;
	-ms-border-radius: 20px;
	-o-border-radius: 20px;
	border-radius: 20px;
}
nav ul ul li {
	display: block;
	padding: 12px 12px;
}
nav ul ul li:last-child {
	border-bottom: 0;
}
nav ul ul li a {
	display: block;
	font-size: 15px;
	color: #333;
	font-weight: 500;
	letter-spacing: 1px;
}

.menu-btn {
	margin-left: auto;
	margin-right: 25px;
}

.btn-default {
	display: inline-block;
	color: #ffffff;
	font-size: 16px;
	text-transform: uppercase;
	height: 58px;
	line-height: 58px;
	padding: 0 42px;
	font-weight: 700;
}
.btn-default i {
	color: #fff;
	margin-right: 7px;
}
.btn-default:hover {
	color: #fff;
}
.btn-default i:before {
	font-size: 16px;
}


/* MAIN BANNER SECTION */

.main-banner {
	background-repeat: no-repeat;
	background-size: cover;
	padding: 160px 0 150px;
}
.overlay {
	position: relative;
	z-index: 1;
}
.fixed-bg.overlay {
	position: absolute;
	z-index: -1;
}
.overlay:before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0.70);
	z-index: -1;
}
.overlay.lg-dark:before {
	background-color: rgba(0,0,0,0.90);
}
.overlay-bg:before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(12,12,12,0.90);
}
.overlay-light {
	position: absolute;
}
.overlay-light:before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(255,255,255,0.70);
}
.banner-text {
	max-width: 720px;
	margin: 0 auto;
}
.banner-text > h2 {
	color: #ffffff;
	font-size: 60px;
	margin-bottom: 18px;
	font-family: 'Roboto', sans-serif;
}
.banner-text > h2 strong {
	font-weight: 800;
    font-family: 'Barlow', sans-serif;
    display: block;
}
.banner-text p {
	color: #dbdbdb;
	font-size: 20px;
	font-weight: 300;
	margin-bottom: 53px;
}
.banner-text ul li {
	display: inline-block;
	margin-right: 12px;
}
.banner-text ul li:last-child {
	margin-right: 0;
}
.banner-text ul li .btn-default {
	background-color: inherit;
	border:2px solid #ffffff;
	line-height: 54px;
}
.banner-text ul li .btn-default:hover {
	color: #fff;
	border-color: transparent;
}



/* ABT SECTION */

.about-section {
	margin-top: -55px;
	position: relative;
	z-index: 99;
}
.abt-text {
	padding: 26px;
	-webkit-box-shadow: 0 0 35px rgba(0,0,0,0.10);
	-moz-box-shadow: 0 0 35px rgba(0,0,0,0.10);
	-ms-box-shadow: 0 0 35px rgba(0,0,0,0.10);
	-o-box-shadow: 0 0 35px rgba(0,0,0,0.10);
	box-shadow: 0 0 35px rgba(0,0,0,0.10);
	background-color: #fff;
	position: relative;
	height: 100%;
}
.rad-status {
	display: inline-block;
	position: absolute;
	top: 10px;
	right: 10px;
	color: #fff;
	font-size: 15px;
	font-weight: 600;
	text-transform: uppercase;
	height: 42px;
	line-height: 42px;
	padding: 0 30px;
}
.rad-status i {
	color: #fff;
	margin-right: 10px;
	position: relative;
	top: -1px;
}
.rad-status i:before {
	font-size: 14px;
	font-weight: 400;
}
.abt-text > span {
	display: block;
	color: #999999;
	font-size: 15px;
	font-weight: 600;
	text-transform: uppercase;
	margin-bottom: 10px;
}
.abt-text > h2 {
	color: #333333;
	font-size: 40px;
	line-height: 44px;
	font-weight: 700;
	margin-bottom: 52px;
}
.presented > h3 {
	color: #999999;
	font-size: 20px;
	text-transform: capitalize;
	font-family: 'Roboto', sans-serif;
	margin-bottom: 11px;
	font-weight: 600;
}
.presented ul li {
	display: inline-block;
	margin-right: 10px;
}
.presented ul li:last-child {
	margin-right: 0;
}
/* ... */

